<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90EE90"
    android:backgroundTint="#90EE90"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2E8B57"
        android:backgroundTint="#2E8B57"
        android:padding="10sp"
        android:text="@string/tytul"
        android:textColor="#263238"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/imieinazwisko"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/imnazw"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#33691E" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gat"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/listagatunki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/list">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wiek" />

        <TextView
            android:id="@+id/latalicznik"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/defwiek" />

        <SeekBar
            android:id="@+id/lata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:max="20"
            android:progress="0" />
    </LinearLayout>

    <EditText
        android:id="@+id/powod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/celwizyty"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/godzina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:text="@string/defhour"
        android:autofillHints="" />

    <Button
        android:id="@+id/zatwierdzenie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>